add validation to new building form, fixed other validations

--- a/Budfirmex/src/app/buildings/modals/comments/comment-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/comments/comment-modal.component.html
@@ -8,11 +8,11 @@
   <div class="modal-body">
     <form #form="ngForm">
       <div class="form-group">
-        <label for="remarks">Numer komentarza</label>
-        <input class="form-control" name="commentNumber" [(ngModel)]="model.commentNumber" #commentNumber="ngModel">
+        <label for="commentNumber">Numer komentarza</label>
+        <input class="form-control" name="commentNumber" required [(ngModel)]="model.commentNumber" #commentNumber="ngModel">
         <ng-container *ngIf="commentNumber.invalid && commentNumber.touched">
           <div class="alert alert-danger" role="alert" *ngIf="commentNumber.errors.required">
-            Pole jest puste. Wpisz uwagi.
+            Pole jest puste. Wpisz numer komentarza.
           </div>
         </ng-container>
       </div>
