--- a/Budfirmex/src/app/buildings/modals/operator-work-card/operator-work-card-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/operator-work-card/operator-work-card-modal.component.html
@@ -13,21 +13,41 @@
     <form #form="ngForm">
       <div class="form-group">
         <label for="name_sur">Pracownik</label>
-        <select id="name_sur" name="worker" class="form-control" [(ngModel)]="model.workerId">
+        <select id="name_sur" name="worker" class="form-control" [(ngModel)]="model.workerId" #worker="ngModel" required>
           <option *ngFor="let worker of workers" [value]="worker.id">{{ worker.firstName + ' ' + worker.lastName }}</option>
         </select>
+        <ng-container *ngIf="worker.invalid && worker.touched">
+          <div class="alert alert-danger" role="alert" *ngIf="worker.errors.required">
+            Wybierz pracownika.
+          </div>
+        </ng-container>
       </div>
       <div class="form-group">
         <label for="work_day">Dzień pracy</label>
-        <input id="work_day" type="date" name="date_of_work" class="form-control" [(ngModel)]="model.dateOfWorkCard" >
+        <input id="work_day" type="date" name="date_of_work" class="form-control" [(ngModel)]="model.dateOfWorkCard" #date_of_work="ngModel" required>
+        <ng-container *ngIf="date_of_work.invalid && date_of_work.touched">
+          <div class="alert alert-danger" role="alert" *ngIf="date_of_work.errors.required">
+            Wybierz dzień pracy.
+          </div>
+        </ng-container>
       </div>
       <div class="form-group">
         <label for="work_start">Rozpoczęcie pracy</label>
-        <input id="work_start" type="time" name="work_start" class="form-control" step="2" [(ngModel)]="model.timeOfBegin" >
+        <input id="work_start" type="time" name="work_start" class="form-control" step="2" [(ngModel)]="model.timeOfBegin" #work_start="ngModel" required>
+        <ng-container *ngIf="work_start.invalid && work_start.touched">
+          <div class="alert alert-danger" role="alert" *ngIf="work_start.errors.required">
+            Wybierz godzinę rozpoczęcia pracy.
+          </div>
+        </ng-container>
       </div>
       <div class="form-group">
         <label for="work_end">Zakończenie pracy</label>
-        <input id="work_end" type="time" name="work_end" class="form-control" step="2" [(ngModel)]="model.timeOfEnd">
+        <input id="work_end" type="time" name="work_end" class="form-control" step="2" [(ngModel)]="model.timeOfEnd" #work_end="ngModel" required>
+        <ng-container *ngIf="work_end.invalid && work_end.touched">
+          <div class="alert alert-danger" role="alert" *ngIf="work_end.errors.required">
+            Wybierz godzinę zakończenia pracy.
+          </div>
+        </ng-container>
       </div>
       <div class="form-group">
         <label for="harmful_hours">Liczba godzin w warunkach szkodliwych</label>
