--- a/Budfirmex/src/app/shared/components/user-profile/user-profile.component.html
+++ b/Budfirmex/src/app/shared/components/user-profile/user-profile.component.html
@@ -1,6 +1,6 @@
-<a class="user-profile" *ngIf="!isLoggedIn" [routerLink]="['/login']">
+<!--<a class="user-profile" *ngIf="!isLoggedIn" [routerLink]="['/login']">
   Zaloguj
-</a>
+</a>-->
 
 <div class="user-profile" *ngIf="isLoggedIn">
     <div class="user-profile__avatar">{{ getFirstLetterOfName() }}</div>
