--- a/Budfirmex/src/app/buildings/modals/done-work/done-work-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/done-work/done-work-modal.component.html
@@ -13,9 +13,14 @@
     <form #form="ngForm">
       <div class="form-group">
         <label for="type_work">Typ roboty</label>
-        <select id="type_work" class="form-control" name="type_work" [(ngModel)]="model.labourNormId">
+        <select id="type_work" class="form-control" name="type_work" [(ngModel)]="model.labourNormId" #type_work="ngModel" required>
           <option *ngFor="let labourNorm of labourNorms" [value]="labourNorm.id">{{ labourNorm.labourName }} ({{labourNorm.unitValue}})</option>
         </select>
+        <ng-container *ngIf="type_work.invalid && type_work.touched">
+          <div class="alert alert-danger" role="alert" *ngIf="type_work.errors.required">
+            Ilość jest wymagana. Podaj ilość.
+          </div>
+        </ng-container>
       </div>
       <div class="form-group">
         <label for="quantity">Ilość</label>
@@ -39,9 +44,14 @@
 <!--      </ng-container>-->
       <div class="form-group">
         <label for="rating">Ocena jakości robót</label>
-        <select id="rating" class="form-control" name="qualityEvaluation" [(ngModel)]="model.qualityEvaluationId">
+        <select id="rating" class="form-control" name="qualityEvaluation" [(ngModel)]="model.qualityEvaluationId" #qualityEvaluation="ngModel" required>
           <option *ngFor="let qualityEvaluation of qualityEvaluations" [value]="qualityEvaluation.id">{{ qualityEvaluation.name }} ({{qualityEvaluation.value}})</option>
         </select>
+        <ng-container *ngIf="qualityEvaluation.invalid && qualityEvaluation.touched">
+          <div class="alert alert-danger" role="alert" *ngIf="qualityEvaluation.errors.required">
+            Wybierz ocenę jakości robót.
+          </div>
+        </ng-container>
       </div>
     </form>
   </div>
