--- a/Budfirmex/src/app/buildings/modals/used-machine/used-machine-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/used-machine/used-machine-modal.component.html
@@ -13,9 +13,14 @@
     <form #form="ngForm">
       <div class="form-group">
         <label for="number_machine">Maszyna</label>
-        <select id="number_machine" class="form-control" name="machine" [(ngModel)]="model.machineId">
+        <select id="number_machine" class="form-control" name="machine" [(ngModel)]="model.machineId" #machine="ngModel" required>
           <option *ngFor="let machine of machines" [value]="machine.id">{{ machine.name }} ({{machine.number}})</option>
         </select>
+        <ng-container *ngIf="machine.invalid && machine.touched">
+          <div class="alert alert-danger" role="alert" *ngIf="machine.errors.required">
+            Wybierz maszynę.
+          </div>
+        </ng-container>
       </div>
       <div class="form-group">
         <label for="type_machine">Spalanie (litr na roboczogodzinę)</label>
@@ -35,9 +40,14 @@
       </div>
       <div class="form-group">
         <label for="operator">Operator</label>
-        <select id="operator" name="operator" class="form-control" [(ngModel)]="model.workerId">
+        <select id="operator" name="operator" class="form-control" [(ngModel)]="model.workerId" #operator="ngModel" required>
           <option *ngFor="let worker of workers" [value]="worker.id">{{worker.firstName + ' ' + worker.lastName}}</option>
         </select>
+        <ng-container *ngIf="operator.invalid && operator.touched">
+          <div class="alert alert-danger" role="alert" *ngIf="operator.errors.required">
+            Wybierz operatora.
+          </div>
+        </ng-container>
       </div>
     </form>
   </div>
