user registration fixes, PUT request modifications

--- a/Budfirmex/src/app/dashboard/components/my-buildings/my-buildings.component.html
+++ b/Budfirmex/src/app/dashboard/components/my-buildings/my-buildings.component.html
@@ -9,7 +9,7 @@
   <mat-tab-group class="mt-2 mb-2">
     <mat-tab label="Aktywne">
       <div class="white-background table-margin">
-        <table class="my-table">
+        <table class="my-table my-table--pointer">
           <thead>
             <tr>
               <td>Numer budowy</td>
@@ -35,7 +35,7 @@
     </mat-tab>
     <mat-tab label="Zakończone">
       <div class="white-background table-margin">
-        <table class="my-table">
+        <table class="my-table my-table--pointer">
           <thead>
             <tr>
               <td>Numer budowy</td>
