--- a/Budfirmex/src/app/buildings/components/comments/comments.component.html
+++ b/Budfirmex/src/app/buildings/components/comments/comments.component.html
@@ -5,7 +5,7 @@
   <h2 class="comments-title">Uwagi</h2>
   <div class="table">
     <div class="white-background table-margin">
-      <table>
+      <table class="my-table">
         <thead>
         <tr>
           <td>Numer</td>
