--- a/Budfirmex/src/app/buildings/components/done-works/done-works.component.html
+++ b/Budfirmex/src/app/buildings/components/done-works/done-works.component.html
@@ -5,7 +5,7 @@
   </app-done-work-modal>
   <h2 class="works-title">Roboty</h2>
   <div class="white-background table-margin">
-    <table>
+    <table class="my-table">
       <thead>
       <tr>
         <th>Lp.</th>
