--- a/Budfirmex/src/app/costs/components/construction-costs/construction-costs.component.html
+++ b/Budfirmex/src/app/costs/components/construction-costs/construction-costs.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <h2 class="cost-title">Koszty budowy</h2>
     <div class="white-background table-margin">
-        <table>
+        <table class="my-table">
             <thead>
                 <tr>
                     <td>Lp.</td>
