--- a/Budfirmex/src/app/buildings/components/materials-used/material-used.component.html
+++ b/Budfirmex/src/app/buildings/components/materials-used/material-used.component.html
@@ -5,7 +5,7 @@
   ></app-materials-used-modal>
 <h2 class="stuff-title">Materiały</h2>
 <div class="white-background table-margin">
-    <table>
+    <table class="my-table">
         <thead>
             <tr>
                 <th>Lp.</th>
