--- a/Budfirmex/src/app/buildings/components/operators-work-cards/operators-work-cards.component.html
+++ b/Budfirmex/src/app/buildings/components/operators-work-cards/operators-work-cards.component.html
@@ -5,7 +5,7 @@
   </app-operator-work-card-modal>
   <p class="operators-title my-3">Operatorzy</p>
   <div class="white-background table-margin">
-    <table>
+    <table class="my-table">
       <thead>
       <tr>
         <th>Lp.</th>
