--- a/Budfirmex/src/app/buildings/components/used-equipments/used-equipments.component.html
+++ b/Budfirmex/src/app/buildings/components/used-equipments/used-equipments.component.html
@@ -5,7 +5,7 @@
   </app-used-machine-modal>
 <p class="machines-title my-3">Maszyny</p>
 <div class="white-background table-margin">
-    <table>
+    <table class="my-table">
         <thead>
             <tr>
                 <th>Lp.</th>
