--- a/Budfirmex/src/app/buildings/components/workers/workers.component.html
+++ b/Budfirmex/src/app/buildings/components/workers/workers.component.html
@@ -5,7 +5,7 @@
   </app-worker-modal>
   <h2 class="workers-title">Robotnicy</h2>
   <div class="white-background table-margin">
-    <table>
+    <table class="my-table">
       <thead>
       <tr>
         <th>Lp.</th>
