--- a/Budfirmex/src/app/buildings/pages/building/building.component.scss
+++ b/Budfirmex/src/app/buildings/pages/building/building.component.scss
@@ -1,5 +1,11 @@
 @import "variables";
 
+.daily-reports-title {
+  margin: 24px 0;
+  font-size: 24px;
+  font-weight: bold;
+}
+
 .building-details {
   margin-top: 32px;
 
