--- a/Budfirmex/src/app/login/components/login/login.component.html
+++ b/Budfirmex/src/app/login/components/login/login.component.html
@@ -36,7 +36,7 @@
 <!--                        </div>-->
 
                         <div class="form-group">
-                            <a href="#" class="btn btn-link">Nie pamiętam hasła</a>
+                            <a class="nav-link">Nie pamiętam hasła</a>
                         </div>
 
                         <div class="text-center">
