--- a/Budfirmex/src/app/salaries/components/workers-salaries/workers-salaries.component.html
+++ b/Budfirmex/src/app/salaries/components/workers-salaries/workers-salaries.component.html
@@ -2,7 +2,7 @@
     <h2 class="salary-title">Pensje pracowników</h2>
     <button class="button__primary" (click)="openSelectWorkersModal()">Oblicz pensję pracowników</button>
     <div class="white-background table-margin">
-        <table>
+        <table class="my-table">
             <thead>
                 <tr>
                     <td>Lp.</td>
