--- a/Budfirmex/src/app/buildings/modals/used-machine/used-machine-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/used-machine/used-machine-modal.component.html
@@ -58,7 +58,7 @@
 </ng-template>
 
 
-<button *ngIf="usedEquipment" (click)="open(content)">Edytuj</button>
+<button class="button__primary" *ngIf="usedEquipment" (click)="open(content)" mat-raised-button>Edycja</button>
 <button *ngIf="!usedEquipment" type="button" class="btn btn-warning float-end" (click)="open(content)"><svg xmlns="http://www.w3.org/2000/svg"
     width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
     <path
