--- a/Budfirmex/src/app/buildings/modals/worker/worker-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/worker/worker-modal.component.html
@@ -72,7 +72,7 @@
   </div>
 </ng-template>
 
-<button *ngIf="workCard" (click)="open(content)">Edytuj</button>
+<button class="button__primary" *ngIf="workCard" (click)="open(content)" mat-raised-button>Edycja</button>
 <button *ngIf="!workCard" type="button" class="btn btn-warning float-end" (click)="open(content)">
   <svg xmlns="http://www.w3.org/2000/svg"
        width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
