--- a/Budfirmex/src/app/buildings/modals/done-work/done-work-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/done-work/done-work-modal.component.html
@@ -67,4 +67,4 @@
       d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
   </svg>
 </button>
-<button *ngIf="doneWork" (click)="open(content)">Edytuj</button>
+<button class="button__primary" *ngIf="doneWork" (click)="open(content)" mat-raised-button>Edycja</button>
