--- a/Budfirmex/src/app/buildings/modals/operator-work-card/operator-work-card-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/operator-work-card/operator-work-card-modal.component.html
@@ -66,7 +66,7 @@
   </div>
 </ng-template>
 
-<button *ngIf="operatorWorkCard" (click)="open(content)">Edytuj</button>
+<button class="button__primary" *ngIf="operatorWorkCard" (click)="open(content)" mat-raised-button>Edycja</button>
 <button *ngIf="!operatorWorkCard" type="button" class="btn btn-warning float-end" (click)="open(content)"><svg xmlns="http://www.w3.org/2000/svg"
     width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
     <path
