building costs and salaries get connections

--- a/Budfirmex/src/app/buildings/components/building-personnel/building-personnel.component.html
+++ b/Budfirmex/src/app/buildings/components/building-personnel/building-personnel.component.html
@@ -27,7 +27,7 @@
     </div>
   </div>
   <br><p class="box-title">Koszty budowy</p>
-  <button class="button__primary" mat-raised-button>
+  <button class="button__primary" [routerLink]="['/costs']" mat-raised-button>
     Pokaż koszty budowy
   </button>
 </div>
