--- a/Budfirmex/src/app/salaries/components/workers-salaries/workers-salaries.component.html
+++ b/Budfirmex/src/app/salaries/components/workers-salaries/workers-salaries.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <h2 class="salary-title">Pensje pracowników</h2>
-    <button class="button__primary" (click)="openSelectWorkersModal()">Oblicz pensję pracowników</button>
+    <button class="button__primary" (click)="openSelectWorkersModal()" mat-raised-button>Oblicz pensję pracowników</button>
     <div class="white-background table-margin">
         <table class="my-table">
             <thead>
@@ -13,22 +13,20 @@
                     <td>Nadgodziny</td>
                     <td>Godziny nocne</td>
                     <td>Warunki szkodliwe</td>
-                    <td>Brygadzista</td>
                     <td>Pensja brutto</td>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                <tr *ngFor="let salaries of salary">
+                    <td>{{salaries.idSalary}}</td>
+                    <td>{{salaries.worker.firstName + ' ' + salaries.worker.lastName}}</td>
+                    <td>{{salaries.date | date:'MMMM'}}</td>
+                    <td>{{salaries.date | date:'YYYY'}}</td>
+                    <td>{{salaries.hoursSalary}}</td>
+                    <td>{{salaries.overtimeSalary}}</td>
+                    <td>{{salaries.nightHoursSalary}}</td>
+                    <td>{{salaries.harmfulHoursSalary}}</td>
+                    <td>{{salaries.amountSalary}}</td>
                 </tr>
             </tbody>
         </table>
