--- a/Budfirmex/src/app/dashboard/pages/dashboard/dashboard.component.html
+++ b/Budfirmex/src/app/dashboard/pages/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   [isSupervisor]="isSupervisor()"
   [user]="loggedInUser"
   [actualBuildingsCounter]="activeBuildings?.length"
-  [finishedBuildingsCounter]="activeBuildings?.length">
+  [finishedBuildingsCounter]="finishedBuildings?.length">
 </app-user-details>
 <app-my-buildings
   [isSupervisor]="isSupervisor()"
