--- a/Budfirmex/src/app/salaries/pages/salaries/salaries.component.html
+++ b/Budfirmex/src/app/salaries/pages/salaries/salaries.component.html
@@ -2,7 +2,10 @@
 <app-user-details
   [isSupervisor]="isSupervisor()"
   [user]="loggedInUser"
-  [actualBuildingsCounter]="activeBuildings.length"
-  [finishedBuildingsCounter]="activeBuildings.length">
+  [actualBuildingsCounter]="activeBuildings?.length"
+  [finishedBuildingsCounter]="finishedBuildings?.length">
 </app-user-details>
-<app-workers-salaries></app-workers-salaries>
+<app-workers-salaries>
+  [salary]="salary"
+  (refreshSalaries)="onRefreshSalaries()">
+</app-workers-salaries>
