change some elements

--- a/Budfirmex/src/app/buildings/modals/done-work/done-work-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/done-work/done-work-modal.component.html
@@ -18,7 +18,7 @@
         </select>
         <ng-container *ngIf="type_work.invalid && type_work.touched">
           <div class="alert alert-danger" role="alert" *ngIf="type_work.errors.required">
-            Ilość jest wymagana. Podaj ilość.
+            Typ roboty jest wymagana. Wybierz typ roboty.
           </div>
         </ng-container>
       </div>
@@ -49,7 +49,7 @@
         </select>
         <ng-container *ngIf="qualityEvaluation.invalid && qualityEvaluation.touched">
           <div class="alert alert-danger" role="alert" *ngIf="qualityEvaluation.errors.required">
-            Wybierz ocenę jakości robót.
+           Ocena jakości robót jest wymagana. Wybierz ocenę jakości robót.
           </div>
         </ng-container>
       </div>
