--- a/Budfirmex/src/app/buildings/modals/used-machine/used-machine-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/used-machine/used-machine-modal.component.html
@@ -35,7 +35,7 @@
         <input type="text" id="capacity" name="capacity" class="form-control" [disabled]="true" [value]="getSelectedMachine()?.tankCapacity" required >
       </div>
       <div class="form-group">
-        <label for="year">Pojemność zbiornika (w litrach)</label>
+        <label for="year">Rok produkcji</label>
         <input type="text" id="year" name="year" class="form-control" [disabled]="true" [value]="getSelectedMachine()?.yearOfProduction" required >
       </div>
       <div class="form-group">
@@ -53,7 +53,7 @@
   </div>
   <div class="modal-footer">
     <button *ngIf="!usedEquipment" type="submit" class="btn btn-outline-dark" [disabled]="form.invalid" (click)="createUsedMachine()">Zapisz</button>
-    <button *ngIf="usedEquipment" type="submit" class="btn btn-outline-dark" [disabled]="form.invalid" (click)="updateUsedMachine()">Modyfikuj</button>
+    <button *ngIf="usedEquipment" type="submit" class="btn btn-outline-dark" [disabled]="form.invalid" (click)="updateUsedMachine()">Zmodyfikuj</button>
   </div>
 </ng-template>
 
